fix menu links disposal on small displays

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -58,8 +58,8 @@ aside {
       list-style-type: none;
 
       li {
-        margin-right: 5px;
         display: inline;
+        line-height: 3em;
 
         a {
           padding: 5px 15px 5px 15px;
@@ -161,7 +161,7 @@ main {
 
   div#ending_message {
     padding: 0 40px 0 40px;
-    font-color: @light-grey;
+    color: @light-grey;
     font-size: 0.675em;
   }
 }
@@ -185,7 +185,6 @@ main {
 
       ul {
         li {
-          margin-bottom: 26px;
           display: block;
         }
       }
